--- a/GradeBook/GradeBook.Wpf/MVVM/Views/GradingView.xaml
+++ b/GradeBook/GradeBook.Wpf/MVVM/Views/GradingView.xaml
@@ -2,125 +2,172 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GradeBook.Wpf.MVVM.Views"
-             xmlns:viewModels="clr-namespace:GradeBook.Wpf.MVVM.ViewModel"      
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:viewModels="clr-namespace:GradeBook.Wpf.MVVM.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    
     <UserControl.DataContext>
         <viewModels:GradingViewModel/>
     </UserControl.DataContext>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-        </Grid.ColumnDefinitions>
-        <Button Content="Get Grading Form"
-                Command="{Binding GetGradingFormCommand}"
-                Height="30"
-                Width="100"
-                Grid.Row="0"
-                Grid.Column="0"
-                Margin="5,5,0,0"/>
-        <Grid x:Name="LayoutRoot"
-              Grid.Row="1"
-              Grid.Column="0">
-            <ScrollViewer x:Name="PageScrollViewer">
-                <StackPanel x:Name="ContentStackPanel">
-                    <TextBlock x:Name="HeaderText"
-                               Text="Student Overview"/>
-                    <DataGrid ItemsSource="{Binding Gradings}"
-                              AutoGenerateColumns="False">
-                        <DataGrid.Columns>
-                            <DataGridTextColumn Binding="{Binding MatriculationNumber}"
-                                                Header="Matriculation Number"
-                                                IsReadOnly="True"/>
-                            <DataGridTemplateColumn>
-                                <DataGridTemplateColumn.HeaderStyle>
-                                    <Style TargetType="DataGridColumnHeader">
-                                        <Setter Property="HorizontalContentAlignment"
-                                                Value="Stretch"/>
-                                        <Setter Property="VerticalContentAlignment"
-                                                Value="Stretch"/>
-                                        <Setter Property="Margin"
-                                                Value="0"/>
-                                        <Setter Property="ContentTemplate">
-                                            <Setter.Value>
-                                                <DataTemplate>
-                                                    <ItemsControl ItemsSource="{Binding DataContext.ProblemList, ElementName=LayoutRoot}">
-                                                        <ItemsControl.ItemsPanel>
-                                                            <ItemsPanelTemplate>
-                                                                <StackPanel Orientation="Horizontal">
-                                                                </StackPanel>
-                                                            </ItemsPanelTemplate>
-                                                        </ItemsControl.ItemsPanel>
-                                                        <ItemsControl.ItemTemplate>
-                                                            <DataTemplate>
-                                                                <Border Width="70">
-                                                                    <TextBlock Text="{Binding}"
-                                                                               TextAlignment="Center"/>
-                                                                </Border>
-                                                            </DataTemplate>
-                                                        </ItemsControl.ItemTemplate>
-                                                    </ItemsControl>                                                           
-                                                </DataTemplate>
-                                            </Setter.Value>
-                                        </Setter>
-                                    </Style>
-                                </DataGridTemplateColumn.HeaderStyle>
-                                <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <ItemsControl ItemsSource="{Binding PointsPerProblems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                                            <ItemsControl.ItemsPanel>
-                                                <ItemsPanelTemplate>
-                                                    <StackPanel Orientation="Horizontal"/>
-                                                </ItemsPanelTemplate>
-                                            </ItemsControl.ItemsPanel>
-                                            <ItemsControl.ItemTemplate>
-                                                <DataTemplate>
-                                                    <Border Width="70">
-                                                        <TextBox Text="{Binding Path=PointsPerProblemValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                                 TextAlignment="Center">
-                                                        </TextBox>
-                                                    </Border>
-                                                </DataTemplate>
-                                            </ItemsControl.ItemTemplate>
-                                        </ItemsControl>
-                                    </DataTemplate>
-                                </DataGridTemplateColumn.CellTemplate>
-                            </DataGridTemplateColumn>
-                            <DataGridTextColumn Binding="{Binding Grade}"
-                                                Header="Grade"
-                                                IsReadOnly="True"/>
-                            <DataGridTextColumn Binding="{Binding TotalScore}"
-                                                Header="Total Score"
-                                                IsReadOnly="True"/>
-                        </DataGrid.Columns>
-                    </DataGrid>
-                </StackPanel>
-            </ScrollViewer>
+    
+    <WrapPanel>
+        
+        <Grid>
+            
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            
+            <Button Content="Get Grading Form"
+                    Command="{Binding GetGradingFormCommand}"
+                    Height="30"
+                    Width="100"
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Margin="5,5,0,0"/>
+            
+            <Grid x:Name="LayoutRoot"
+                  Grid.Row="1"
+                  Grid.Column="0">
+                <ScrollViewer x:Name="PageScrollViewer">
+                    <StackPanel x:Name="ContentStackPanel">
+                        
+                        <TextBlock x:Name="HeaderText"
+                                   Text="Student Overview"/>
+                        
+                        <DataGrid ItemsSource="{Binding Gradings}"
+                                  AutoGenerateColumns="False">
+                            
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Binding="{Binding MatriculationNumber}"
+                                                    Header="Matriculation Number"
+                                                    IsReadOnly="True"/>
+                                
+                                <DataGridTemplateColumn>
+                                    <DataGridTemplateColumn.HeaderStyle>
+                                        <Style TargetType="DataGridColumnHeader">
+                                            <Setter Property="HorizontalContentAlignment"
+                                                    Value="Stretch"/>
+                                            <Setter Property="VerticalContentAlignment"
+                                                    Value="Stretch"/>
+                                            <Setter Property="Margin"
+                                                    Value="0"/>
+                                            <Setter Property="ContentTemplate">
+                                                <Setter.Value>
+                                                    <DataTemplate>
+                                                        <ItemsControl ItemsSource="{Binding DataContext.ProblemList, ElementName=LayoutRoot}">
+                                                            <ItemsControl.ItemsPanel>
+                                                                <ItemsPanelTemplate>
+                                                                    <StackPanel Orientation="Horizontal">
+                                                                    </StackPanel>
+                                                                </ItemsPanelTemplate>
+                                                            </ItemsControl.ItemsPanel>
+                                                            <ItemsControl.ItemTemplate>
+                                                                <DataTemplate>
+                                                                    <Border Width="70">
+                                                                        <TextBlock Text="{Binding Path=ProblemName}"
+                                                                                   TextAlignment="Center"/>
+                                                                    </Border>
+                                                                </DataTemplate>
+                                                            </ItemsControl.ItemTemplate>
+                                                        </ItemsControl>                                                           
+                                                    </DataTemplate>
+                                                </Setter.Value>
+                                            </Setter>
+                                        </Style>
+                                    </DataGridTemplateColumn.HeaderStyle>
+                                    <DataGridTemplateColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <ItemsControl ItemsSource="{Binding PointsPerProblems, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                                                <ItemsControl.ItemsPanel>
+                                                    <ItemsPanelTemplate>
+                                                        <StackPanel Orientation="Horizontal"/>
+                                                    </ItemsPanelTemplate>
+                                                </ItemsControl.ItemsPanel>
+                                                <ItemsControl.ItemTemplate>
+                                                    <DataTemplate>
+                                                        <Border Width="70">
+                                                            <TextBox Text="{Binding Path=DoubleValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                                     TextAlignment="Center">
+                                                            </TextBox>
+                                                        </Border>
+                                                    </DataTemplate>
+                                                </ItemsControl.ItemTemplate>
+                                            </ItemsControl>
+                                        </DataTemplate>
+                                    </DataGridTemplateColumn.CellTemplate>
+                                </DataGridTemplateColumn>            
+                                
+                                <DataGridTextColumn Binding="{Binding TotalScore,
+                                    Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                    Header="Total Score"
+                                                    IsReadOnly="True"/>
+                                
+                                <DataGridTextColumn Binding="{Binding Grade,
+                                    Mode=TwoWay,
+                                    UpdateSourceTrigger=PropertyChanged}"
+                                                    Header="Grade"
+                                                    IsReadOnly="True"/>
+                            </DataGrid.Columns>
+                            
+                        </DataGrid>
+                        
+                    </StackPanel>
+                </ScrollViewer>
+            </Grid>
+            
+            <Button Content="Save Grading"
+                    Command="{Binding SaveGradingCommand}"
+                    Grid.Row="3"
+                    Grid.Column="0"
+                    Height="30"
+                    Width="100"
+                    Margin="5,5,0,0"/>
         </Grid>
-        <Button Content="Calculate Exam Grading"
-                Command="{Binding CalculateExamGradingCommand}"
-                Grid.Row="2"
-                Grid.Column="0"
-                Margin="5,5,0,0"
-                Height="30"
-                Width="Auto"/>
-        <Button Content="Save Grading"
-                Command="{Binding SaveGradingCommand}"
-                Grid.Row="3"
-                Grid.Column="0"
-                Height="30"
-                Width="100"
-                Margin="5,5,0,0"
-                IsEnabled="{Binding SaveGradingEnabled}"/>
-    </Grid>
+        
+        <Grid Margin="5,5,0,0">
+            
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            
+            <DataGrid ItemsSource="{Binding ProblemList}"
+                      AutoGenerateColumns="False"
+                      Grid.Row="0"
+                      Grid.Column="0">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Binding="{Binding ProblemName}"
+                                        Header="Problem Name"
+                                        IsReadOnly="True"/>
+                    <DataGridTextColumn Binding="{Binding PointsForProblem}"
+                                        Header="Points"
+                                        IsReadOnly="True"/>
+                </DataGrid.Columns>
+            </DataGrid>
+
+            <Label Content="Total Exam Points"
+                   Grid.Row="1"
+                   Grid.Column="1"/>
+            
+            <TextBlock Text="{Binding TotalExamPoints}"
+                       Grid.Row="2"
+                       Grid.Column="1"/>
+        </Grid>
+    </WrapPanel>
 </UserControl>
